# NYC-taxi-data-analysis

./: .gitignore  DOLocationID_count_by_zone.html  PULocationID_count_by_zone.html  README.md  do_count_by_zone.html  pu_count_by_zone.html  pyproject.toml  requirements.txt  setup.py  taxi_zones.html
.ipynb_checkpoints/: pu_count_by_zone-checkpoint.html  taxis-checkpoint.ipynb
notebooks/: EDA.ipynb  Linear_keys.pkl  Non_linear_keys.pkl  base_non_linear_dp.pkl  daily_time_series.ipynb  data_processing.ipynb  hourly_time_series.ipynb  hybrid_keys.pkl  hybrid_order1_dp.pkl  hybrid_order2.pkl  hybrid_order2_dp.pkl  linear_order1.pkl  linear_order1_hour.pkl  linear_order2_hour.pkl  linear_order3.pkl  linear_order3_dp.pkl  linear_order3_dp_hour.pkl  linear_order4_dp.pkl  linear_order4_dp_hour.pkl  linear_order4_hour.pkl  linear_order5.pkl  linear_order5_dp.pkl  linear_order5_dp_hour.pkl  modelling.ipynb  sig_lags_daily.pkl  sig_lags_hourly.pkl  taxis.ipynb  test_daily_time_series.ipynb
notebooks/Backups/: taxis.ipynb  test_daily_time_series-Copy1.ipynb  test_daily_time_series-Copy2.ipynb  test_daily_time_series.ipynb
scripts/: get_parquet.py  parquet_files.txt
src/: __init__.py  data_processing.py  forecast_helpers.py
src/jfk_taxis/: __init__.py  data_processing.py  eda_helpers.py  forecast_helpers.py
src/jfk_taxis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
